fixing java version issue